--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Best Vacations Ever</h1>
-<a href="https://wnolan6.github.io/my-capstone-page/">Click here for my apk</a>
+<a href="app-release.apk">Download APK</a>
